--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "mdbreact": "^5.2.0",
     "rc-slider": "9.6.5",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -15,6 +16,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hooks": "^1.0.1",
     "react-js-pagination": "^3.0.3",
     "react-number-format": "^5.1.1",
     "react-redux": "^8.0.4",
