add files modified

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sushiapp",
+  "name": "sushi's",
   "version": "1.0.0",
   "description": "full ecommerce site",
   "main": "index.js",
