--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,20 +1,20 @@
 PORT = 4000
 NODE_ENV = DEVELOPMENT
-DB_LOCAL_URL= mongodb://localhost:27017/ecommerceSushiApp
-DB_URI = mongodb+srv://admin:admin@cluster0.lgmezxr.mongodb.net/ecommerceSushiApp?retryWrites=true&w=majority
+DB_LOCAL_URL= 
+DB_URI = 
 FRONTEND_URL = "http://localhost:3000"
-JWT_SECRET =  lhdsiaohdlkshdksnbfklbflksahfioqh21324
+JWT_SECRET =  
 JWT_EXPIRES_TIME = 1h 
-#Expire in 5m, if you considers is a lot time, just change it.
+#Expire in 1h, if you considers is a lot time, just change it.
 COOKIE_EXPIRES_TIME = 7
 
-CLOUDINARY_CLOUD_NAME = dxvqwffdj
-CLOUDINARY_API_KEY = 416532154983858
-CLOUDINARY_API_SECRET = LnVgn2_Z789CRzfIciVAPVkIqrg
+CLOUDINARY_CLOUD_NAME =
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
 
 SMTP_HOST = smtp.mailtrap.io
 SMTP_PORT = 2525
-SMTP_EMAIL = 0e4690f4039280
-SMTP_PASSWORD = 727e06db17173d
+SMTP_EMAIL = 
+SMTP_PASSWORD = 
 SMTP_FROM_EMAIL = noreply@FukusukseSushi.com
 SMTP_FROM_NAME = FukusukseSushi
