--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,12 @@
     "react-number-format": "^5.1.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.2",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
